--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="video-section">
       <video width="100%" height="auto" autoplay muted loop>
-        <source src="Image/video1.mp4" type="video/mp4" />
+        <source src="Image/video_1.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
